<resources>
    <string name="app_name">ALPHA NiX ΩM3GA</string>
    <string name="site_url">https://alphanixomega.blogspot.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tag_line">A beginning with no end ...</string>
    <string name="sk3tch_machin3">SK3TCH-MACHiN3</string>
    <string name="wick3d_poison">WiCK3D-POiSON</string>
    <string name="g3cko_taco">G3CKO-TACO</string>
    <string name="shutt3r_sh3ph3rd">SHUTT3R-SH3PH3RD</string>
    <string name="opul3nt_brood">OPUL3NT-BROOD</string>
    <string name="misc">MiSC</string>
    <string name="top_picks">TOP PiCKS</string>
    <string name="recent_posts">RECENT POSTS</string>
    <string name="categories">Categories</string>
</resources>
